--- a/index.css
+++ b/index.css
@@ -129,3 +129,63 @@ body {
     border-bottom: 2px solid var(--blanc);
     font-size: 3rem;
 }
+.login_container{
+    
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
+}
+.login label{
+    color: var(--blanc);
+    font-size: 1.5rem;
+    font-family: var(--font-family);
+    margin-top: 20px;
+    margin-bottom: 10px;
+
+}
+.login h1{
+    color: var(--blanc);
+
+}
+.login{
+    backdrop-filter: blur(10px);
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    height: 50%;
+    border: var(--blanc)  0.7px solid;
+    border-radius: 25px;
+
+}
+.login form{
+    margin-top: 40px;
+    backdrop-filter: blur(10px);
+    
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+
+    
+}
+.login input{
+    background: transparent;
+    border: var(--gris1) 0.8px solid;
+    border-radius: 10px;
+    width: 100%;
+    height: 40px;
+    padding: 15px;
+}
+.login button{
+    margin-top: 30px;
+    background-color: var(--gris2);
+    width: 75%;
+    align-self: center;
+    color: var(--blanc);
+    height: 40px;
+    font-size: 1.5rem;
+}
