About et Contact views are updated

--- a/plantaneuse/public/css/styles.css
+++ b/plantaneuse/public/css/styles.css
@@ -5,8 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
 
 :root {
-    --purple: #8e44ad;
-    --orange: #f39c12;
+    --purple: #FF748B;
+    --orange: #A7D477;
     --black: #333;
     --red: #c0392b;
     --white: #FFF;
