--- a/plantaneuse/resources/css/styles.css
+++ b/plantaneuse/resources/css/styles.css
@@ -5,8 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
 
 :root {
-    --purple: #FF748B;
-    --orange: #A7D477;
+    --purple: #8e44ad;
+    --orange: #f39c12;
     --black: #333;
     --red: #c0392b;
     --white: #FFF;
@@ -50,24 +50,9 @@
     background-color: var(--purple);
 }
 
-
-html,
-body {
+html {
     font-size: 62.5%;
     overflow-x: hidden;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-.home {
-    height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)),
-        url('../img/home-bg.jpg') no-repeat center center fixed;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 section {
@@ -103,7 +88,6 @@ section {
 .white-btn,
 .btn {
     background-color: var(--purple);
-    padding: 30px 20px;
 }
 
 .delete-btn {
@@ -176,7 +160,7 @@ section {
     align-items: center;
     flex-direction: column;
     gap: 1rem;
-    background: url('../img/heading-bg.jpg') no-repeat center center;
+    background: url('/public/img/heading-bg.jpg') no-repeat center center;
     background-size: cover;
 }
 
@@ -344,9 +328,6 @@ header .main-header .flex .navbar a {
     font-size: 2rem;
     text-transform: capitalize;
 }
-
-
-
 
 header .main-header .flex .navbar a:hover {
     color: var(--purple);
@@ -540,8 +521,9 @@ header .main-header .flex .icons>*:hover {
 ========= home.php =========
 ==================== */
 .home {
+    height:100vh;
     min-height: 70vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('../img/home-bg.jpg') no-repeat center center fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('/../public/img/home-bg.jpg') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
