--- a/plantaneuse/public/css/styles.css
+++ b/plantaneuse/public/css/styles.css
@@ -7,38 +7,35 @@
 @tailwind components;
 @tailwind utilities;
 
-
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600&display=swap");
 /* styles.css */
 
-
-
 :root {
-    --purple: #FF748B;
-    --orange: #A7D477;
+    --purple: #ff748b;
+    --orange: #a7d477;
     --black: #333;
     --red: #c0392b;
-    --white: #FFF;
+    --white: #fff;
     --light-color: #666;
-    --light-white: #CCC;
+    --light-white: #ccc;
     --light-background: #f5f5f5;
-    --border-custom: .1rem solid var(--black);
-    --box-shadow-custom: 0 .5rem 1rem rgba(0, 0, 0, .1);
+    --border-custom: 0.1rem solid var(--black);
+    --box-shadow-custom: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
 }
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Rubik', sans-serif;
+    font-family: "Rubik", sans-serif;
     border: none;
     outline: none;
     text-decoration: none;
-    transition: all .2s linear;
-    -webkit-transition: all .2s linear;
-    -moz-transition: all .2s linear;
-    -ms-transition: all .2s linear;
-    -o-transition: all .2s linear;
+    transition: all 0.2s linear;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -ms-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
 }
 
 *::selection {
@@ -48,7 +45,7 @@
 
 *::-webkit-scrollbar {
     width: 1rem;
-    height: .5rem;
+    height: 0.5rem;
 }
 
 *::-webkit-scrollbar-track {
@@ -76,7 +73,7 @@ section {
     font-size: 4rem;
 }
 
-.btn,
+.btn1,
 .option-btn,
 .delete-btn,
 .white-btn {
@@ -86,16 +83,16 @@ section {
     cursor: pointer;
     color: var(--white);
     font-size: 1.8rem;
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     text-transform: capitalize;
 }
 
 .white-btn,
-.btn {
+.btn1 {
     background-color: var(--purple);
 }
 
@@ -107,7 +104,7 @@ section {
     background-color: var(--orange);
 }
 
-.btn:hover,
+.btn1:hover,
 .option-btn:hover,
 .delete-btn:hover {
     background-color: var(--black);
@@ -119,12 +116,11 @@ section {
     box-shadow: var(--box-shadow-custom);
 }
 
-
-.message {
+.message1 {
     position: sticky;
     top: 0;
     margin: 0 auto;
-    padding:2rem 70rem;
+    padding: 2rem 70rem;
     width: 100%;
     max-width: 100%;
     background-color: var(--white);
@@ -135,18 +131,18 @@ section {
     gap: 1.5rem;
 }
 
-.message span {
+.message1 span {
     font-size: 2rem;
     color: var(--black);
 }
 
-.message i {
+.message1 i {
     cursor: pointer;
     color: var(--red);
     font-size: 2.5rem;
 }
 
-.message i:hover {
+.message1 i:hover {
     transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
@@ -171,7 +167,7 @@ section {
     align-items: center;
     flex-direction: column;
     gap: 1rem;
-    background: url('../img/heading-bg.jpg') no-repeat center center;
+    background: url("../img/heading-bg.jpg") no-repeat center center;
     background-size: cover;
 }
 
@@ -206,6 +202,7 @@ section {
     }
 }
 
+
 /* =================
 ========= register.php && login.php =========
 ==================== */
@@ -221,11 +218,11 @@ section {
 .form-container form {
     width: 50rem;
     padding: 2rem;
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     box-shadow: var(--box-shadow-custom);
     /* border: var(--border-custom); */
     background-color: var(--light-background);
@@ -241,11 +238,11 @@ section {
 
 .form-container form .box {
     width: 100%;
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     background: var(--light-background);
     padding: 1.2rem 1.4rem;
     font-size: 1.8rem;
@@ -344,14 +341,14 @@ header .main-header .flex .navbar a:hover {
     color: var(--purple);
 }
 
-header .main-header .flex .icons>* {
+header .main-header .flex .icons > * {
     font-size: 2rem;
     color: var(--black);
     margin-left: 1.5rem;
     cursor: pointer;
 }
 
-header .main-header .flex .icons>*:hover {
+header .main-header .flex .icons > *:hover {
     color: var(--purple);
 }
 
@@ -366,15 +363,15 @@ header .main-header .flex .icons>*:hover {
     box-shadow: var(--box-shadow-custom);
     padding: 2rem;
     text-align: center;
-    border-radius: .5rem;
-    -webkit-border-radius: .5;
-    -moz-border-radius: .5;
-    -ms-border-radius: .5;
-    -o-border-radius: .5;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5;
+    -moz-border-radius: 0.5;
+    -ms-border-radius: 0.5;
+    -o-border-radius: 0.5;
     border: var(--border-custom);
     display: none;
-    animation: fadeIn .2s linear;
-    -webkit-animation: fadeIn .2s lin;
+    animation: fadeIn 0.2s linear;
+    -webkit-animation: fadeIn 0.2s lin;
 }
 
 .header .flex .user-box.show-account {
@@ -415,7 +412,7 @@ header .main-header .flex .icons>*:hover {
 .edit-profile {
     width: 100%;
     min-height: 100vh;
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -433,11 +430,11 @@ header .main-header .flex .icons>*:hover {
     overflow-y: scroll;
     padding: 2rem;
     text-align: center;
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     background-color: var(--white);
 }
 
@@ -449,11 +446,11 @@ header .main-header .flex .icons>*:hover {
 .edit-profile form .box {
     width: 100%;
     background-color: var(--light-background);
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     margin: 1rem 0;
     padding: 1.2rem 1.4rem;
     color: var(--black);
@@ -461,7 +458,7 @@ header .main-header .flex .icons>*:hover {
     box-shadow: var(--box-shadow-custom);
 }
 
-.edit-profile form .btn,
+.edit-profile form .btn1,
 .edit-profile form .option-btn {
     width: 40%;
 }
@@ -500,7 +497,7 @@ header .main-header .flex .icons>*:hover {
 
 .footer .box-container .box p i,
 .footer .box-container .box a i {
-    padding-right: .5rem;
+    padding-right: 0.5rem;
     color: var(--purple);
 }
 
@@ -521,7 +518,6 @@ header .main-header .flex .icons>*:hover {
     border-top: var(--border-custom);
     text-transform: capitalize;
     line-height: 1.5;
-
 }
 
 .footer .credit span {
@@ -532,9 +528,10 @@ header .main-header .flex .icons>*:hover {
 ========= home.php =========
 ==================== */
 .home {
-    height:100vh;
+    height: 100vh;
     min-height: 70vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url('/../img/home-bg.jpg') no-repeat center center fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)),
+        url("/../img/home-bg.jpg") no-repeat center center fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -572,11 +569,11 @@ header .main-header .flex .icons>*:hover {
 
 .home-products .box-container .box {
     background-color: var(--white);
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     padding: 2rem;
     box-shadow: var(--box-shadow-custom);
     text-align: center;
@@ -598,11 +595,11 @@ header .main-header .flex .icons>*:hover {
     position: absolute;
     top: 1rem;
     left: 1rem;
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     font-size: 2rem;
     color: var(--red);
     padding: 1rem;
@@ -613,11 +610,11 @@ header .main-header .flex .icons>*:hover {
 .home-products .box-container .box .quantity {
     width: 100%;
     padding: 1.2rem 1.4rem;
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     margin: 1rem 0;
     font-size: 1.5rem;
     color: var(--light-color);
@@ -640,11 +637,11 @@ header .main-header .flex .icons>*:hover {
 
 .home-about .flex .imgBx img {
     width: 100%;
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
 }
 
 .home-about .flex .content {
@@ -680,7 +677,7 @@ header .main-header .flex .icons>*:hover {
     color: var(--light-white);
     padding: 1rem 0;
     width: 500px;
-    letter-spacing: .4rem;
+    letter-spacing: 0.4rem;
     text-transform: capitalize;
 }
 
@@ -708,7 +705,7 @@ header .main-header .flex .icons>*:hover {
     width: 500px;
     text-align: center;
     margin: 1rem auto;
-    letter-spacing: .3rem;
+    letter-spacing: 0.3rem;
 }
 
 #load {
@@ -734,11 +731,11 @@ header .main-header .flex .icons>*:hover {
     width: 500px;
     max-width: 100%;
     background-color: var(--white);
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     padding: 2rem;
     box-shadow: var(--box-shadow-custom);
     text-align: center;
@@ -747,11 +744,11 @@ header .main-header .flex .icons>*:hover {
 .reviews .box-container .box img {
     width: 10rem;
     height: 10rem;
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
 }
 
 .reviews .box-container .box p {
@@ -777,8 +774,8 @@ header .main-header .flex .icons>*:hover {
 
 .reviews .box-container .box .stars {
     display: inline-block;
-    margin: .5rem 0;
-    padding: .5rem 1.5rem;
+    margin: 0.5rem 0;
+    padding: 0.5rem 1.5rem;
     user-select: none;
 }
 
@@ -848,11 +845,11 @@ header .main-header .flex .icons>*:hover {
     background-color: var(--white);
     padding: 2rem;
     box-shadow: var(--box-shadow-custom);
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     text-align: center;
 }
 
@@ -868,11 +865,11 @@ header .main-header .flex .icons>*:hover {
     margin: 1rem 0;
     width: 100%;
     background-color: var(--white);
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     padding: 1.2rem 1.4rem;
     box-shadow: var(--box-shadow-custom);
     color: var(--black);
@@ -909,11 +906,11 @@ header .main-header .flex .icons>*:hover {
 
 .shopping-cart .box-container .box {
     background-color: var(--white);
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     padding: 2rem;
     box-shadow: var(--box-shadow-custom);
     text-align: center;
@@ -922,8 +919,8 @@ header .main-header .flex .icons>*:hover {
 
 .shopping-cart .box-container .box a.fa-times {
     position: absolute;
-    top: -.5rem;
-    right: -.5rem;
+    top: -0.5rem;
+    right: -0.5rem;
     font-size: 2rem;
     background-color: var(--red);
     color: var(--white);
@@ -959,14 +956,14 @@ header .main-header .flex .icons>*:hover {
 }
 
 .shopping-cart .box-container .box input[type="number"] {
-    margin: .5rem 0;
+    margin: 0.5rem 0;
     font-size: 2rem;
     border: var(--border-custom);
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     padding: 1.2rem 1.4rem;
     text-align: center;
     width: 9rem;
@@ -992,11 +989,11 @@ header .main-header .flex .icons>*:hover {
     text-align: center;
     border: var(--border-custom);
     margin-top: 2rem;
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
 }
 
 .shopping-cart .cart-total p {
@@ -1053,7 +1050,7 @@ header .main-header .flex .icons>*:hover {
     background-color: var(--light-bg);
     color: var(--black);
     /* text-transform: capitalize; */
-    margin: .5rem;
+    margin: 0.5rem;
     padding: 1rem 1.5rem;
     box-shadow: var(--box-shadow-custom);
 }
@@ -1064,7 +1061,7 @@ header .main-header .flex .icons>*:hover {
 }
 
 .display-order .grand-total {
-    border-top: thin solid #CCC;
+    border-top: thin solid #ccc;
     padding-top: 1.5rem;
     font-size: 2.5rem;
     color: var(--light-color);
@@ -1107,11 +1104,11 @@ header .main-header .flex .icons>*:hover {
 .checkout form .flex .input-box select {
     width: 100%;
     font-size: 2rem;
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     padding: 1.2rem 1.4rem;
     color: var(--black);
     background-color: var(--white);
@@ -1153,11 +1150,11 @@ header .main-header .flex .icons>*:hover {
     padding: 2rem;
     background-color: var(--light-bg);
     box-shadow: var(--box-shadow-custom);
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     max-height: 500px;
     overflow-y: scroll;
 }
@@ -1204,11 +1201,11 @@ header .main-header .flex .icons>*:hover {
     padding: 1.2rem 1.4rem;
     background-color: var(--light-bg);
     box-shadow: var(--box-shadow-custom);
-    border-radius: .5rem;
-    -webkit-border-radius: .5rem;
-    -moz-border-radius: .5rem;
-    -ms-border-radius: .5rem;
-    -o-border-radius: .5rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     font-size: 2rem;
     color: var(--black);
     border: var(--border-custom);
@@ -1223,10 +1220,10 @@ header .main-header .flex .icons>*:hover {
     color: #777;
     text-transform: capitalize;
     opacity: 0.5;
-    letter-spacing: .3rem;
+    letter-spacing: 0.3rem;
 }
 
-.search-form .btn {
+.search-form .btn1 {
     margin: 0;
 }
 
@@ -1235,7 +1232,7 @@ header .main-header .flex .icons>*:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    height : 70px;
+    height: 70px;
     margin: 20px auto;
 }
 
@@ -1243,58 +1240,68 @@ header .main-header .flex .icons>*:hover {
     font-size: 1.5rem;
 }
 
-
 .search-bar button {
-    background-color:transparent;
-    margin: 0 ;
-} 
+    background-color: transparent;
+    margin: 0;
+}
 .search-bar button:hover {
     background-color: transparent;
 }
 .search-bar img {
-    width : 50px ;
-    height : 50px ;
+    width: 50px;
+    height: 50px;
     background-color: transparent;
 }
-.search-bar form img{
-    color : black ;
+.search-bar form img {
+    color: black;
     background-color: transparent;
     padding: 0;
-    height : 40px ; 
-    width : 40px ;
-    margin : auto;
+    height: 40px;
+    width: 40px;
+    margin: auto;
 }
-.search-bar form button{
-    padding : 0 ;
+.search-bar form button {
+    padding: 0;
     margin: 0;
-    width : 100px ;
-    height: 100% ;
+    width: 100px;
+    height: 100%;
     border-radius: 5px;
     background-color: var(--purple);
 }
-.search-bar form button:hover{
-    background-color: #ba5b6b;   
+.search-bar form button:hover {
+    background-color: #ba5b6b;
 }
-.search-bar input{
-    width: 700px ;
+.search-bar input {
+    width: 700px;
     padding: 10px;
-    height : 100% ;
-    font-size:x-large;
+    height: 100%;
+    font-size: x-large;
     border-radius: 5px;
-    padding-left: 30px ;
+    padding-left: 30px;
     outline: none;
 }
 .search-bar input::placeholder {
-    color: rgba(0, 0, 0, 0.5); /* Add this line to make placeholder text more transparent */
+    color: rgba(
+        0,
+        0,
+        0,
+        0.5
+    ); /* Add this line to make placeholder text more transparent */
 }
 
-.search-bar form{
+.search-bar form {
     display: flex;
     align-items: center;
     justify-content: center;
-    height : 100% ;
+    height: 100%;
     padding: 0;
     margin: 0;
-    border-radius: 5px  ;
+    border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Add this line */
+}
+
+.selection-indicator {
+    width: 10px;
+    height: 10px;
+    pointer-events: none;
 }
