--- a/plantaneuse/public/css/styles.css
+++ b/plantaneuse/public/css/styles.css
@@ -582,6 +582,7 @@ header .main-header .flex .icons > *:hover {
 
 .home-products .box-container .box img {
     height: 30rem;
+    width: 20rem;
     padding-top: 2.5rem;
 }
 
